refactor: fix deprecated URL constructor usage
- Replace direct URL instantiation with URI.toURL()
- Update version.txt endpoint URL construction
- Addresses deprecation warning in modern Java versions